# seiscomp-programming-templates

./: CMakeLists.txt
amplitude-pga/: CMakeLists.txt  plugin.cpp
qcping/: portlist.conf
