SC_BEGIN_PACKAGE(EXAMPLES_AMPLITUDE_PGA_TEMPLATE)

SET(SEISCOMP_BASE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/base/common)
SET(SEISCOMP_BASE_BINARY_DIR ${CMAKE_BINARY_DIR}/src/base/common)
SET(SEISCOMP_MAIN_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/base/main)
SET(SEISCOMP_MAIN_BINARY_DIR ${CMAKE_BINARY_DIR}/src/base/main)

MESSAGE(STATUS "This example requires API 17 or later")

SET(
	AMP_PGA_SOURCES
		plugin.cpp
)

INCLUDE_DIRECTORIES(${SEISCOMP_BASE_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${SEISCOMP_BASE_BINARY_DIR}/libs)

SC_ADD_PLUGIN_LIBRARY(AMP_PGA tmplamppga "")
SC_LINK_LIBRARIES_INTERNAL(tmplamppga core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
